--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/logo-1.png" class="logo">
+        <img src="/images/logo.png" class="logo">
         <div class="hero">
             <div class="left">
                 <img src="/images/image1.png" id="product-image">
